--- a/2-foodie/tsconfig.json
+++ b/2-foodie/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "initdb.js", "lib/meals.js", "components/meals/meals-grid.tsx"],
   "exclude": ["node_modules"]
 }
