--- a/2-foodie/package.json
+++ b/2-foodie/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.24.4",
     "better-sqlite3": "^9.5.0",
     "next": "14.2.1",
     "react": "^18",
