--- a/page-router/13-page-pre-rendering-data-fetching/package.json
+++ b/page-router/13-page-pre-rendering-data-fetching/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "12-working-with-file-based-routing",
+  "name": "13-page-pre-rendering-data-fetching",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,16 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
+    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18.3.2",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "typescript": "^5"
+    "eslint-config-next": "14.2.3"
   }
 }
