--- a/page-router/17-project-api-routes/tsconfig.json
+++ b/page-router/17-project-api-routes/tsconfig.json
@@ -13,9 +13,9 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/icons/address-icon.js"],
   "exclude": ["node_modules"]
 }
