--- a/page-router/17-project-api-routes/tsconfig.json
+++ b/page-router/17-project-api-routes/tsconfig.json
@@ -16,6 +16,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "components/icons/address-icon.js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
